<resources>
    <string name="app_name">Grocery List</string>
    <string name="show_a_list_of_grocerys">Show a list of groceries</string>
    <string name="show_the_grocerys_map_page">Show the Grocery map page</string>
    <string name="show_the_settings_page">Show the Settings Page</string>
    <string name="grocery_list">Grocery List</string>
    <string name="grocery_settings">Grocery Settings</string>
    <string name="grocery_map">Grocery Map</string>
    <string name="incart">In Cart</string>
    <string name="grocery_image">Grocery Image</string>
    <string name="toggleButton">OFF</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name:</string>
    <string name="show_a_list_of_the_grocerys">Show a list of the groceries</string>
    <string name="off">OFF</string>
    <string name="city">City</string>
    <string name="enter_city">Enter City</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="rating">Rating</string>
    <string name="rate">Rate</string>
    <string name="isInCart">Is In Cart</string>
    <string name="sort_by">Sort By</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="delete">Delete</string>
    <string name="newtext">New</string>
    <string name="grocery_map_page">Grocery Map</string>
    <string name="grocery_setting_page">Grocery Settings</string>
    <string name="grocerys_list">Grocery List</string>
    <string name="grocerys_map">Grocery Map</string>
    <string name="grocerys_settings">Grocery Settings</string>
    <string name="show_the_settings">Show the Settings</string>
    <string name="show_the_map">Show the Map</string>
    <string name="_100">100%</string>
    <string name="sort_order">Sort Order</string>
    <string name="sortby">Sort By</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="geo">Geo</string>
    <string name="master_list">Master List</string>
    <string name="shopping_list">Shopping List</string>
    <string name="clear_all">Clear All</string>
    <string name="delete_checked">Delete Checked</string>
    <string name="is_checked">Is Checked</string>
</resources>
